Coverity analysis defect 120320: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Security 2021-07-26
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /src/mongo/util/net/ssl_manager_openssl.cpp:2988: UNINIT 120320 Declaring variable "digest" without initializer.

            Assignee:
            Sergey Galtsev (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: