SERVER-58585 uninitialized scalar variable